<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/current_location_main_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="chip_group, favorite_icon, refresh_icon, main_card_view, details_card_view" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/current_location_no_internet_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="current_location_no_internet_label, current_location_no_internet_retry_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/current_location_no_internet_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/fragment_current_location_no_internet_placeholder_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/current_location_no_internet_retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_current_location_no_internet_retry_button"
        android:textColor="@color/cta1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_location_no_internet_label" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_today"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chip_text_today" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tomorrow"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chip_text_tomorrow" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_next_five_days"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chip_text_five_days" />

    </com.google.android.material.chip.ChipGroup>

    <ImageButton
        android:id="@+id/favorite_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/chip_group"
        app:layout_constraintBottom_toBottomOf="@id/chip_group"
        app:layout_constraintEnd_toStartOf="@+id/refresh_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip_group"
        tools:ignore="ContentDescription"
        tools:src="@drawable/ic_round_star_24_grey" />

    <ImageButton
        android:id="@+id/refresh_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="@id/chip_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favorite_icon"
        app:layout_constraintTop_toTopOf="@id/chip_group"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/location_name_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_round_location_on"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/location_name_icon"
                app:layout_constraintStart_toEndOf="@id/location_name_icon"
                app:layout_constraintTop_toTopOf="@id/location_name_icon"
                tools:text="Odorheiu Secuiesc, RO" />

            <ImageView
                android:id="@+id/sunrise_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_sunrise"
                app:layout_constraintEnd_toStartOf="@+id/sunrise_text"
                app:layout_constraintTop_toTopOf="@+id/forecast_temperature"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sunrise_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/sunrise_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/sunrise_icon"
                tools:text="6:21" />

            <ImageView
                android:id="@+id/sunset_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_sunset"
                app:layout_constraintBottom_toBottomOf="@+id/forecast_description"
                app:layout_constraintStart_toStartOf="@+id/sunrise_icon"
                app:layout_constraintTop_toBottomOf="@+id/sunrise_icon"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sunset_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/sunset_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/sunset_icon"
                tools:text="20:21" />

            <ImageView
                android:id="@+id/forecast_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/forecast_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/forecast_temperature"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_01d" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forecast_temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/forecast_min_max_temperature"
                app:layout_constraintEnd_toStartOf="@+id/sunrise_icon"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/forecast_icon"
                app:layout_constraintTop_toBottomOf="@+id/location_name_icon"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="8 \u2103" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forecast_min_max_temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/forecast_temperature"
                app:layout_constraintEnd_toStartOf="@+id/sunset_icon"
                app:layout_constraintStart_toEndOf="@+id/forecast_icon"
                app:layout_constraintStart_toStartOf="@+id/forecast_temperature"
                app:layout_constraintTop_toBottomOf="@+id/forecast_temperature"
                tools:text="16 \u2103/ 5 \u2103" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forecast_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/forecast_min_max_temperature"
                app:layout_constraintStart_toStartOf="@+id/forecast_min_max_temperature"
                app:layout_constraintTop_toBottomOf="@+id/forecast_min_max_temperature"
                tools:text="heavy intensity shower rain long long long" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forecast_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forecast_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/details_card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_card_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weather_attributes_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="5"
                tools:listitem="@layout/item_weather_attribute_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/no_data_cached_placeholder"
        layout="@layout/location_details_forecast_not_found_locally"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/initial_permission_request_placeholder"
        layout="@layout/current_location_location_permission_required_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/progress_bar"
        layout="@layout/screen_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
